# fastapi-cbx

./: LICENSE  README.md  cbx.py  pyproject.toml  setup.cfg  test_cbx.py
.github/workflows/: ci.yml  publish-to-pypi.yml
