[metadata]
name = fastapi-cbx
version = 0.9.0
author = HeHongye
author_email = 18348574371@139.com
description = Minimal class-based routing extension for FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HeHongyeFY/fastapi-cbx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = cbx
python_requires = >=3.8
install_requires =
    fastapi >=0.95.0

[options.package_data]
